# medusa

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COMPILE  Dockerfile  LICENSE.rtf  LICENSE.txt  README.rst  appveyor.yml  bootstrap_use_llvm.bat  compileonLinuxGunmetalExample.sh  compileonLinuxWithTestsGunmetalExample.sh  vcpkg-note.txt
package/: CMakeLists.txt
package/python/: MANIFEST.in  __init__.py  setup.py
src/: CMakeLists.txt
src/arch/: CMakeLists.txt
src/arch/arm/: CMakeLists.txt  arm_architecture.cpp  arm_architecture.hpp  arm_calling_convention.cpp  arm_calling_convention.hpp  arm_def.hpp  arm_helper.cpp  arm_helper.hpp  arm_opcode.cpp  arm_opcode.ipp  main.cpp
src/arch/avr8/: CMakeLists.txt  avr8_architecture.cpp  avr8_architecture.hpp  avr8_instruction.hpp  avr8_register.hpp  main.cpp
src/arch/gb/: CMakeLists.txt  gameboy_architecture.cpp  gameboy_architecture.hpp  gameboy_instruction.hpp  gameboy_opcode.cpp  gameboy_register.hpp  main.cpp
src/arch/st62/: CMakeLists.txt  main.cpp  st62_architecture.cpp  st62_architecture.hpp  st62_decoder.cpp  st62_mnemonic.cpp  st62_opcode.cpp  st62_opcode.ipp  st62_operand.cpp
src/arch/x86/: CMakeLists.txt  main.cpp  x86.hpp  x86_architecture.cpp  x86_architecture.hpp  x86_calling_convention.cpp  x86_calling_convention.hpp  x86_const.hpp  x86_cpu.cpp  x86_decoder.cpp  x86_flag.ipp  x86_format.cpp  x86_format_instruction.cpp  x86_format_operand.cpp  x86_mnemonic.cpp  x86_modrm_sib.cpp  x86_opcode.cpp  x86_opcode.ipp  x86_opcode_table_1.cpp  x86_opcode_table_2.cpp  x86_opcode_table_3DNOW1.cpp  x86_opcode_table_3_38.cpp  x86_opcode_table_3_3A.cpp  x86_opcode_table_FP1.cpp  x86_opcode_table_FP2.cpp  x86_opcode_table_FP3.cpp  x86_opcode_table_FP4.cpp  x86_opcode_table_FP5.cpp  x86_opcode_table_FP6.cpp  x86_opcode_table_FP7.cpp  x86_opcode_table_FP8.cpp  x86_opcode_table_sse5a.cpp  x86_operand.cpp  x86_operand.ipp  x86_register.cpp
src/arch/z80/: CMakeLists.txt  main.cpp  z80_architecture.cpp  z80_architecture.hpp  z80_mnemonic.cpp  z80_opcode.cpp  z80_opcode.ipp
src/bind/: CMakeLists.txt
src/bind/pybind11/: CMakeLists.txt  bind_python.cpp  bind_python.hpp  py_address.cpp  py_address.hpp  py_architecture.cpp  py_architecture.hpp  py_binary_stream.cpp  py_binary_stream.hpp  py_cell.cpp  py_cell.hpp  py_configuration.cpp  py_configuration.hpp  py_context.cpp  py_context.hpp  py_cpu_information.cpp  py_cpu_information.hpp  py_database.cpp  py_database.hpp  py_document.cpp  py_document.hpp  py_exception.cpp  py_exception.hpp  py_execution.cpp  py_execution.hpp  py_expression.cpp  py_expression.hpp  py_instruction.cpp  py_instruction.hpp  py_label.cpp  py_label.hpp  py_loader.cpp  py_loader.hpp  py_logger.cpp  py_logger.hpp  py_medusa.cpp  py_medusa.hpp  py_memory_area.cpp  py_memory_area.hpp  py_symbolic.cpp  (+5 more)
src/bind/python/: CMakeLists.txt  bind_python.cpp  bind_python.hpp  py_address.cpp  py_address.hpp  py_architecture.cpp  py_architecture.hpp  py_binary_stream.cpp  py_cell.cpp  py_cell.hpp  py_configuration.cpp  py_context.cpp  py_context.hpp  py_cpu_information.cpp  py_cpu_information.hpp  py_database.cpp  py_document.cpp  py_document.hpp  py_emulation.hpp  py_exception.cpp  py_exception.hpp  py_execution.cpp  py_execution.hpp  py_expression.cpp  py_expression.hpp  py_instruction.cpp  py_instruction.hpp  py_label.cpp  py_label.hpp  py_loader.cpp  py_loader.hpp  py_logger.cpp  py_logger.hpp  py_medusa.cpp  py_memory_area.cpp  py_memory_area.hpp  py_operand.hpp  py_symbolic.cpp  py_symbolic.hpp  py_xrefs.cpp  (+2 more)
src/compil/llvm/: CMakeLists.txt  llvm_compiler.cpp  llvm_compiler.hpp  main.cpp
src/core/: CMakeLists.txt  address.cpp  analyzer.cpp  analyzer_basic_block.cpp  analyzer_disassemble.cpp  analyzer_function.cpp  analyzer_instruction.cpp  analyzer_string.cpp  architecture.cpp  array.cpp  basic_block.cpp  binding.cpp  calling_convention.cpp  cell.cpp  cell_action.cpp  cell_data.cpp  cell_text.cpp  character.cpp  compilation.cpp  configuration.cpp  context.cpp  control_flow_graph.cpp  cpu.cpp  database.cpp  detail.cpp  disassembler.cpp  disassembly_view.cpp  document.cpp  emulation.cpp  endian.cpp  event_queue.cpp  exception.cpp  execution.cpp  expression.cpp  expression_filter.cpp  expression_operation.cpp  expression_parser.cpp  expression_simplifier.cpp  expression_visitor.cpp  function.cpp  (+31 more)
src/db/memory/: CMakeLists.txt  main.cpp  memory_db.cpp  memory_db.hpp
src/db/soci/: CMakeLists.txt  main.cpp  soci_db.cpp  soci_db.hpp  soci_serializer.cpp  soci_serializer.hpp
src/db/sqlite3/: CMakeLists.txt  main.cpp  sqlite3_db.cpp  sqlite3_db.hpp
src/db/text/: CMakeLists.txt  main.cpp  text_db.cpp  text_db.hpp
src/emul/: CMakeLists.txt
src/emul/interpreter/: CMakeLists.txt  interpreter_emulator.cpp  interpreter_emulator.hpp  main.cpp
src/emul/llvm/: CMakeLists.txt  llvm_emulator.cpp  llvm_emulator.hpp  main.cpp
src/ext/intelhex/: intelhexclass.cpp  intelhexclass.h
src/ldr/: CMakeLists.txt
src/ldr/avr8/: CMakeLists.txt  avr8_loader.cpp  avr8_loader.hpp  main.cpp
src/ldr/bs/: CMakeLists.txt  bootsector_loader.cpp  bootsector_loader.hpp  main.cpp
src/ldr/dos/: CMakeLists.txt  dos.cpp  dos.hpp  dos_loader.cpp  dos_loader.hpp  main.cpp
src/ldr/elf/: CMakeLists.txt  elf.h  elf_interpreter.hpp  elf_loader.cpp  elf_loader.hpp  elf_traits.hpp  main.cpp
src/ldr/gb/: CMakeLists.txt  gameboy.h  gameboy_loader.cpp  gameboy_loader.hpp  main.cpp
src/ldr/mach-o/: CMakeLists.txt  mach-o.h  mach-o_loader.cpp  mach-o_loader.hpp  mach-o_traits.hpp  main.cpp
src/ldr/pe/: CMakeLists.txt  main.cpp  pe.cpp  pe.hpp  pe_interpreter.hpp  pe_loader.cpp  pe_loader.hpp
src/ldr/raw/: CMakeLists.txt  main.cpp  raw_loader.cpp  raw_loader.hpp
src/ldr/st62/: CMakeLists.txt  main.cpp  (+2 more)
src/os/: CMakeLists.txt
src/srlz/: CMakeLists.txt
src/test/: CMakeLists.txt  test_arch.cpp  test_bind.cpp  test_compil.cpp  test_core.cpp  test_db.cpp  test_emul.cpp  test_expr.cpp  test_ldr.cpp  test_os.cpp
src/tests/: CMakeLists.txt  TestOfTest.cc
src/tools/: CMakeLists.txt
src/ui/: CMakeLists.txt
(+379 files in other folders)
