# add the modules directories
add_subdirectory(arch)  # Architecture
add_subdirectory(core)  # Core
add_subdirectory(ldr)   # Loader
#add_subdirectory(plg)  # Plugin
add_subdirectory(ui)    # User interface
add_subdirectory(os)    # Operating System
add_subdirectory(emul)  # Emulation
add_subdirectory(db)    # Database
