# add architecture directories
add_subdirectory(elf)	# ELF (eXecutable Linking Format)
add_subdirectory(gb)	# GameBoy
add_subdirectory(pe)	# PE  (Portable Executable)
add_subdirectory(bs)	# Boot Sector
add_subdirectory(raw)   # Raw
add_subdirectory(mach-o)# Mach-o (Mach Object file format)
add_subdirectory(avr8)# avr8 file loader

